# space-router-sdk

./: .gitignore  LICENSE  README.md  TODO.md
.claude/: launch.json
.github/workflows/: build-home-node.yml  deploy.yml  publish-js.yml  publish.yml  test.yml
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/docs/: cli.md
cli/src/spacerouter_cli/: __init__.py  config.py  main.py  output.py
cli/src/spacerouter_cli/commands/: api_key.py  config_cmd.py  dashboard.py  escrow.py  identity.py  node.py  receipts.py  request.py  status.py
cli/tests/: conftest.py  test_api_key.py  test_config_cmd.py  test_dashboard.py  test_escrow_cli.py  test_identity.py  test_integration.py  test_node.py  test_request.py  test_status.py
coordination-api/: .env.example  deploy.sh  fly.toml  schema.sql
coordination-api/app/: config.py  db.py  dependencies.py  main.py  sqlite_db.py
coordination-api/migrations/: 001_add_tailscale_fields.sql  002_add_ip_classification.sql
coordination-api/tests/: conftest.py  test_api_keys.py  test_internal.py  test_ip_info_service.py  test_nodes.py  test_routing_service.py
docs/: API.md  configuration.md  deployment.md  e2e-testing.md  roadmap.md  security.md  upnp.md
home-node/: .gitignore  homenode.spec  requirements-dev.txt  requirements.txt
proxy-gateway/: Dockerfile  deploy.sh  fly.toml
scripts/: e2e-demo.sh  e2e-staging-demo.sh
sdk/js/: README.md  (+4 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/docs/: identity.md
sdk/python/src/spacerouter/: __init__.py  admin.py  client.py  escrow.py  exceptions.py  identity.py  models.py
sdk/python/src/spacerouter/payment/: __init__.py  byte_counter.py  client_receipt.py  client_wallet.py  consumer_settlement.py  eip712.py  spacecoin_client.py
sdk/python/tests/: test_admin.py  test_client.py  test_client_identity.py  test_client_payment.py  test_consumer_settlement.py  test_escrow.py  test_integration.py  test_payment_sdk.py
space-router-sqlite/: .gitignore  PULL_REQUEST_TEMPLATE.md  README.md  space-router-sqlite.bundle  sqlite-support.patch
(+89 files in other folders)
