[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacerouter"
version = "0.1.0"
description = "Python SDK for the Space Router residential proxy network"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
socks = ["httpx[socks]>=0.27,<1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spacerouter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
